# geant4_simulation

./: CMakeLists.txt  GNUmakefile  README.md  gui.mac  gui.mac_unused  init_vis.mac  repeat.mac  startup.mac  test_electron.cc  vis.mac
include/: TEActionInitialization.hh  TEAnalysis.hh  TEDefinitions.hh  TEDefinitions.hh~  TEDetectorConstruction.hh  TEDetectorConstruction.hh_old  TEDetectorConstruction_separateElectrodes.hh  TEEventAction.hh  TEIncluder.hh  TEMagTabulatedField3D.hh  TEPhysicsList.hh  TEPrimaryGeneratorAction.hh  TEPrimaryGeneratorAction.hh_works  TERunAction.hh  TESteppingAction.hh  TETrackerHit.hh  TETrackerSD.hh
src/: TEActionInitialization.cc  TEDetectorConstruction.cc  TEDetectorConstruction.cc_bak  TEDetectorConstruction.cc_old  TEDetectorConstruction.cc_works  TEDetectorConstruction.cc~  TEEventAction.cc  TEMagTabulatedField3D.cc  TEMagTabulatedField3D.cc~  TEPhysicsList.cc_doesntwork  TEPhysicsList.cc_original  TEPrimaryGeneratorAction.cc  TEPrimaryGeneratorAction.cc_works  TERunAction.cc  TESteppingAction.cc  TESteppingAction.cc~  TETrackerHit.cc  TETrackerSD.cc
